# sandbox

./: README.md  n_to_1_reductions  reqts.py  tide_filter.C
C/: acor.c  acors.c  addtime.c  autcor.c  badmap.c  bayes.c  bigtest.c  bit.c  bittest.c  byteorder.c  cdemod.c  chlor.read.c  correl.c  defined.c  demo.of.ifdefing.c  digits.c  dircount.c  dirtime.c  donc.h  eng2.c  fmapll.c  glk.c  hp20.acor.c  icegradient.c  icegrids.h  icelapl.c  ifdef_demo.c  inc8.h  ireduce.c  mac2unix.c  macros.h  mapll.cpp.c  mapll2.c  mask.c  maskll.c  maskps.c  maxfiles.c  nesdis_inc8.h  nesdis_nasa91.c  newsrc.trim.c  (+22 more)
CPP/: 1kwrong.C  200m.C  4km.C  a.C  aa3.C  aa3.both.C  aa4.C  aatopo.C  adist.C  ageavg.C  agehist.C  alag.C  all_locations.C  analy.C  animate.C  area.C  area2.C  area_above_cutoff.C  areas.C  arryijpt.C  ascii.tohycombin.C  augment.C  autocovary.C  avhrr_binary.C  bathyavg.C  bedient.C  blend.C  blend2.C  buoy_vel.C  buoydatetest.C  centroid.C  check.C  climo.C  climosubs.C  cluster.ssmi.start.C  cmp.C  cmp2.C  coding  cofs.C  collapse.C  (+269 more)
ESMF_HelloWorld/: ESMF_HelloWorld  ESMF_HelloWorld.F90  Makefile  PET0.ESMF_LogFile  exports
F/: BAKSOL.f  BAROTEST.F  CON.ANALY.F  DCHECK.F  DRUCKF.f  EKMANUV.F  EX.f  FFT192.f  GRIBIT.f  I:O_test.f  IMP.f  LRSHIFT.F  LUDECM.F  MULTCOR.F  MULTLN.F  PHASEPLANE.F  PLANET.F  QUEDES.f  RAND.f  REFNEW.F  RNEWRAP.f  RPERM.f  SADVECT.f  SHORT.F  SPASSM.f  SPHERE.f  STRAIN.f  TMIN.F  TOPOG.F  TRANST.f  VAPOR.f  VECMAX.f  aaengrib.f  aatopo.f  acopout.f  acor3.f  adv1d1.f  adv1d2.f  adv2main.f  aext2d2.f  (+348 more)
aerodynamics/: aerodynamics.F90  makefile  movies.sh  plot.C
astro_poisson/: advect.F90  divergence.F90  integral.F90  main.F90  makefile  poisson.F90  poisson.F90.20150919
audio/: a.19  a.20  alpha6  annual.inst  annual.py  audio.py  balto.py  beta.19  beta.20  collect.py  diurnal.py  diurnal1.inst  from_phyx.py  harmonic.py  instrument.py  listen.py  music.py  new.py  note.py  output.csv  piano.py  pure.inst  try2.py  tuned.py  twinkle.py  whistle.py
bacio/: a.f  b.c  ba.c  ba.f  ba2.f  ba3.f  bac.f  bac2.f  bacio.doc  bacio.doc.c  bacio.emc1.c  bacio.f  bacio.full.c  bacio.v1.1.c  bacio.v1.2.c  bacio.v1.3.19981105.c  bacio.v1.3.19990312.c  bacio.v1.3.19990406.c  bacio.v1.3.19991004.c  bacio.v1.3.c  bacio.v1.3.c.diff  bacio2.c  bacio3.c  bacio_demo.f  bacio_module.mod  baciodoc.tex  baio.c  ban.f  banio.c  batest.c  file1  file2  grbindex.f  grbindex.makefile  grbindex.md.f  make.bacio  (+11 more)
cmake.demos/: CMakeLists.txt  TutorialConfig.h  TutorialConfig.h.in  cmake_install.cmake  install_manifest.txt  tutorial.c++
cmake.demos/ssmi.Cd/: CMakeLists.txt  Makefile  cmake_install.cmake  ssmi.C
(+6399 files in other folders)
